# ARCS-SDK-Windows

aubo_sdk-0.25.0-rc.4-Windows_AMD64+81c34a8/: VERSION
aubo_sdk-0.25.0-rc.4-Windows_AMD64+81c34a8/include/: rspidcfg.h
aubo_sdk-0.25.0-rc.4-Windows_AMD64+81c34a8/include/aubo/: axis_interface.h  runtime_machine.h  sync_move.h  type_def.h
aubo_sdk-0.25.0-rc.4-Windows_AMD64+81c34a8/include/aubo/error_stack/: rtm_error.h  system_error.h
aubo_sdk-0.25.0-rc.4-Windows_AMD64+81c34a8/include/aubo/robot/: force_control.h  io_control.h  robot_algorithm.h  robot_config.h  robot_state.h
aubo_sdk-0.25.0-rc.4-Windows_AMD64+81c34a8/include/aubo_sdk/: register_control_c.h  rpc.h  rpc_c.h  script.h  sync_move_c.h  trace_c.h  type_def_c.h
aubo_sdk-0.25.0-rc.4-Windows_AMD64+81c34a8/include/aubo_sdk/robot/: robot_algorithm_c.h  robot_interface_c.h  robot_manage_c.h
aubo_sdk-0.25.0-rc.4-Windows_AMD64+81c34a8/include/robot_proxy/: realtime_robot_state.h  robot_proxy.h
aubo_sdk-0.25.0-rc.4-Windows_AMD64+81c34a8/lib/: robot_proxy.lib
aubo_sdk-0.25.0-rc.4-Windows_AMD64+81c34a8/lib/cmake/aubo_sdk/: aubo_sdkTargets.cmake
aubo_sdk-0.25.0-rc.4-Windows_AMD64+81c34a8/share/doc/: error_code.md  rtde_recipe.md
aubo_sdk-0.25.0-rc.4-Windows_AMD64+81c34a8/share/example/aubo_script/: example_client.lua  example_math.lua  example_movec_i5.lua  example_movej.lua  example_movel.lua  example_server.lua  example_startup.lua
aubo_sdk-0.25.0-rc.4-Windows_AMD64+81c34a8/share/example/c++/: armplay.cpp  example_collision_recovery.cpp  example_config2.cpp  example_data_collect.cpp  example_extract_data.cpp  example_fc_assemble.cpp  example_fc_assemble_usercoord.cpp  example_force_control.cpp  example_math.cpp  example_moveSpiral_i5.cpp  example_move_speed.cpp  example_move_speed2.cpp  example_movec_i5.cpp  example_movej.cpp  example_movel_i5.cpp  example_movel_offset.cpp  example_movel_singularity_i5.cpp  example_multi_thread.cpp  example_pause_resume.cpp  example_payload_identify.cpp  example_payload_identify1.cpp  example_popup_dismiss.cpp  example_register.cpp  example_rtde_udp.cpp  example_rtde_uds.cpp  example_script.cpp  example_script2.cpp  example_script_uds.cpp  example_servo_cartesian.cpp  example_servoj.cpp  example_servoj2.cpp  example_spline.cpp  example_spline2.cpp  example_startup.cpp  example_step_mode.cpp  example_timer.cpp  example_trackj.cpp
aubo_sdk-0.25.0-rc.4-Windows_AMD64+81c34a8/share/example/c++/robot_proxy/: CMakeLists.txt  widget.ui
aubo_sdk-0.25.0-rc.4-Windows_AMD64+81c34a8/share/example/csharp/: README.md
aubo_sdk-0.25.0-rc.4-Windows_AMD64+81c34a8/share/example/python/: example_armplay.py  example_freedrive.py  example_math.py  example_movej.py  example_movel.py  example_movel_singularity.py  example_script2.py  (+6 more)
aubo_sdk-0.25.0-rc.4-Windows_AMD64+81c34a8/share/example/utils/firmware_installation/: CMakeLists.txt
include/: AuboRobotMetaType.h  robotiomatetype.h  rsdef.h  rstype.h  serviceinterface.h
include/aubo/: aubo_api.h  global_config.h  math.h  register_control.h  robot_interface.h  serial.h  socket.h  system_info.h  trace.h
include/aubo/error_stack/: error_stack.h  hal_error.h
include/aubo/robot/: motion_control.h  robot_manage.h
include/aubo_sdk/: math_c.h  rtde.h  runtime_machine_c.h  serial_c.h  socket_c.h  system_info_c.h
include/aubo_sdk/robot/: force_control_c.h  io_control_c.h  motion_control_c.h  robot_config_c.h  robot_state_c.h
lib/: aubo_sdk.lib  aubo_sdkd.lib  robot_proxyd.lib
lib/cmake/aubo_sdk/: aubo_sdkConfig.cmake  aubo_sdkConfigVersion.cmake  aubo_sdkTargets-debug.cmake  aubo_sdkTargets-release.cmake
share/example/aubo_script/: example_algorithm.lua  example_config.lua  example_io.lua  example_state.lua  example_tcp_socket_client.lua
share/example/c++/: CMakeLists.txt  armplay.cpp  example_algorithm.cpp  example_axis_move_joint.cpp  example_axis_offline.cpp  example_collision_recovery.cpp  example_config.cpp  example_config2.cpp  example_data_collect.cpp  example_extract_data.cpp  example_fc_assemble.cpp  example_fc_assemble_usercoord.cpp  example_force_control.cpp  example_force_control2.cpp  example_freedrive.cpp  example_io.cpp  example_math.cpp  example_moveSpiral_i5.cpp  example_move_speed.cpp  example_move_speed2.cpp  example_movec_i5.cpp  example_movej.cpp  example_movel_i5.cpp  example_movel_offset.cpp  example_movel_singularity_i5.cpp  example_movel_weave_i5.cpp  example_multi_thread.cpp  example_offset_weave_i5.cpp  example_pause_resume.cpp  example_payload_identify.cpp  example_payload_identify1.cpp  example_popup_dismiss.cpp  example_register.cpp  example_rtde.cpp  example_rtde_udp.cpp  example_rtde_uds.cpp  example_run_program.cpp  example_script.cpp  example_script2.cpp  example_script_uds.cpp  (+15 more)
share/example/c++/aubope/: example_0.cpp  example_1.cpp  example_1.h  example_3.cpp  example_5.cpp  example_6.cpp  example_6.h  example_8.cpp  example_8.h  example_bhwk_c.cpp  util.cpp
share/example/c++/robot_proxy/: widget.cpp  widget.h
share/example/c++/trajs/: aubo-joint-test-1014.armplay  path.txt  path1.txt  physiotherapy.txt  waypoints_dof-9_0-90-1.offt
share/example/c++/trajs/collision_traj/: 1.csv  11_trajectory_vel2_acc5.txt  6.csv  8.csv
share/example/c++/visual_studio/example_movej/: example_movej.vcxproj
share/example/c++/visual_studio/example_rtde/: example_rtde.vcxproj
share/example/c++/visual_studio/example_servoj2/: example_servoj2.vcxproj
share/example/c++/visual_studio/example_startup/: example_startup.vcxproj
share/example/csharp/: csharp-example.sln
share/example/python/: example_algorithm.py  example_armplay.py  example_config.py  example_freedrive.py  example_io.py  example_math.py  example_motion_control.py  example_movec.py  example_movej.py  example_movel.py  example_movel_singularity.py  example_multi_thread.py  example_offline_track.py  example_record.py  example_rtde.py  example_script.py  example_script2.py  example_servo_cartesian.py  example_servoj.py  example_servoj2.py  example_set_log_handler.py  example_startup.py  example_state.py  example_timer.py  example_track_joint.py
(+50 files in other folders)
